--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
         </div>
     </section>
 
+    <div class="parallax"></div>
+
+    </div>
     <!-- FEATURES -->
     <section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="resume">
         <div class="container">
