--- a/about.html
+++ b/about.html
@@ -54,6 +54,9 @@
           <a class="nav-link" href="about.html">about</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="index.html#Experience">Experience</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="index.html#projects">Projects</a>
         </li>
         <li class="nav-item">
