--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#Experience">Experience</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#projects">projects</a>
         </li>
         <li class="nav-item">
@@ -69,7 +72,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-11 mx-auto">
-        <h1 class="text-white font-tertiary">Hi! I’m <br> Archit Dudeja <br> Business Analyst</h1>
+        <h1 class="text-white font-tertiary">Hi! I’m <br> Archit Dudeja <br> Business Data Analyst</h1>
+        <a href="https://github.com/architdudeja/Resume/blob/main/Archit_Dudeja_Resume.pdf" class="btn btn-danger">Resume</a>
+
       </div>
     </div>
   </div>
@@ -127,7 +132,7 @@
 <!-- /about -->
 
 <!-- skills -->
-<section class="section" id="'skills">
+<section class="section" id="skills">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
@@ -183,7 +188,7 @@
 <!-- /skills -->
 
 <!-- experience -->
-<section class="section" id="experience">
+<section class="section" id="Experience">
   <div class="container">
     <div class="row justify-content-around">
       <div class="col-lg-12 text-center">
@@ -430,7 +435,7 @@
  /testimonial -->
 
 
-<!-- blog -->
+<!-- blog --
 <section class="section" id="projects">
   <div class="container">
     <div class="row">
@@ -479,8 +484,8 @@
     </div>
   </div>
 </section>
-<!-- /blog -->
- <!-- client logo slider -->
+ /blog -->
+ <!-- client logo slider -
 <section class="section pb-0">
   <div class="container">
     <div class="client-logo-slider d-flex align-items-center">
@@ -507,7 +512,7 @@
     </div>
   </div>
 </section>
-<!-- /client logo slider -->
+-- /client logo slider -->
 
 <!-- contact -->
 <section class="section section-on-footer" data-background="images/backgrounds/bg-dots.png">
