--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <a class="nav-link" href="#projects">projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#projects">Contact</a>
+          <a class="nav-link" href="https://drive.google.com/file/d/1S_8bBAADVAan-sXZr38k7oAN9zoQVA25/view?usp=sharing" target="_blank">Resume</a>
         </li>
       </ul>
     </div>
@@ -72,8 +72,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-11 mx-auto">
-        <h1 class="text-white font-tertiary">Hi! I’m <br> Archit Dudeja <br> Business Data Analyst</h1>
-        <a href="https://github.com/architdudeja/Resume/blob/main/Archit_Dudeja_Resume.pdf" class="btn btn-danger">Resume</a>
+        <h1 class="text-white font-tertiary">Hi ! I’m <br> Archit Dudeja <br> Business Data Analyst</h1>
+        <a href="https://drive.google.com/file/d/1S_8bBAADVAan-sXZr38k7oAN9zoQVA25/view?usp=sharing" target="_blank" class="btn btn-danger">Resume</a>
 
       </div>
     </div>
