--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
           <a class="nav-link" href="index.html#projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#contact">Contact</a>
+          <a class="nav-link" href="https://drive.google.com/file/d/1S_8bBAADVAan-sXZr38k7oAN9zoQVA25/view?usp=sharing" target="_blank">Resume</a>
         </li>
       </ul>
     </div>
